--- a/.rultor.yml
+++ b/.rultor.yml
@@ -5,12 +5,12 @@ env:
 merge:
   script: |-
     mvn clean install -Pcheckstyle
-#decrypt:
-#  settings.xml: "repo/rcfg/settings.xml.asc"
-#  pubring.gpg: "repo/rcfg/pubring.gpg.asc"
-#  secring.gpg: "repo/rcfg/secring.gpg.asc"
-#release:
-#  script: |-
-#    chmod +x ./rrv.sh
-#    ./rrv.sh
+decrypt:
+  settings.xml: "repo/rcfg/settings.xml.asc"
+  pubring.gpg: "repo/rcfg/pubring.gpg.asc"
+  secring.gpg: "repo/rcfg/secring.gpg.asc"
+release:
+  script: |-
+    chmod +x ./rrv.sh
+    ./rrv.sh
 
